--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,11 @@
         "issues": "https://github.com/zfcampus/zf-hal/issues"
     },
     "repositories": [
-        { "type": "composer", "url": "https://packages.zendframework.com" }
+        { "type": "composer", "url": "https://packages.zendframework.com" },
+        {
+            "type": "vcs",
+            "url": "https://github.com/astepin/zf-api-problem"
+        }
     ],
     "extra": {
         "branch-alias": {
@@ -27,27 +31,27 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zfcampus/zf-api-problem": "~1.0",
-        "zendframework/zend-escaper": "~2.3",
-        "zendframework/zend-eventmanager": "~2.3",
-        "zendframework/zend-hydrator": "~1.0",
-        "zendframework/zend-json": "~2.3",
-        "zendframework/zend-mvc": "~2.6",
-        "zendframework/zend-paginator": "~2.3",
-        "zendframework/zend-uri": "~2.3",
-        "zendframework/zend-view": "~2.3",
-        "zendframework/zend-stdlib": "~2.7"
+        "php": ">=5.6",
+        "zfcampus/zf-api-problem": "dev-master",
+        "zendframework/zend-escaper": "~2.5",
+        "zendframework/zend-eventmanager": "~3.0",
+        "zendframework/zend-hydrator": "~2.2",
+        "zendframework/zend-json": "~3.0",
+        "zendframework/zend-mvc": "~3.0",
+        "zendframework/zend-paginator": "~2.7",
+        "zendframework/zend-uri": "~2.5",
+        "zendframework/zend-view": "~2.8",
+        "zendframework/zend-stdlib": "~3.0"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "4.7.*",
+        "phpunit/PHPUnit": "5.4.*",
         "squizlabs/php_codesniffer": "^2.3.1",
-        "zendframework/zend-console": "~2.3",
-        "zendframework/zend-filter": "~2.3",
-        "zendframework/zend-http": "~2.3",
-        "zendframework/zend-loader": "~2.3",
-        "zendframework/zend-servicemanager": "~2.3",
-        "zendframework/zend-validator": "~2.3"
+        "zendframework/zend-console": "~2.6",
+        "zendframework/zend-filter": "~2.7",
+        "zendframework/zend-http": "~2.5",
+        "zendframework/zend-loader": "~2.5",
+        "zendframework/zend-servicemanager": "~3.1",
+        "zendframework/zend-validator": "~2.8"
     },
     "autoload": {
         "psr-4": {
